--- a/notebooks/J01_data_cleaning.ipynb
+++ b/notebooks/J01_data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "from utils.constants import HOME_DIR, DATA_DIR"
+    "from src.utils.constants import HOME_DIR, DATA_DIR"
    ]
   },
   {
@@ -493,6 +493,49 @@
     "# Save to a new CSV file\n",
     "data.to_csv(DATA_DIR + 'clean_data.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv(DATA_DIR + 'clean_data.csv')\n",
+    "\n",
+    "# Split the data into train/test/validation sets\n",
+    "val_size = int(len(data) * 0.1)\n",
+    "test_size = int(len(data) * 0.1)\n",
+    "train_size = len(data) - val_size - test_size\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "indices = np.random.permutation(data.index)\n",
+    "\n",
+    "train_indices = indices[:train_size]\n",
+    "val_indices = indices[train_size:train_size + val_size]\n",
+    "test_indices = indices[train_size + val_size:]\n",
+    "\n",
+    "train_data = data.loc[train_indices]\n",
+    "val_data = data.loc[val_indices]\n",
+    "test_data = data.loc[test_indices]\n",
+    "\n",
+    "train_data.to_csv(DATA_DIR + 'splits/train.csv', index=False)\n",
+    "val_data.to_csv(DATA_DIR + 'splits/val.csv', index=False)\n",
+    "test_data.to_csv(DATA_DIR + 'splits/test.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
