jules sync commit

--- a/notebooks/J01_data_cleaning.ipynb
+++ b/notebooks/J01_data_cleaning.ipynb
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
     "\n",
     "train_data.to_csv(DATA_DIR + 'splits/train.csv', index=False)\n",
     "val_data.to_csv(DATA_DIR + 'splits/val.csv', index=False)\n",
-    "test_data.to_csv(DATA_DIR + 'splits/test.csv', index=False)\n"
+    "test_data.to_csv(DATA_DIR + 'splits/test.csv', index=False)"
    ]
   },
   {
