--- a/notebooks/J01_data_cleaning.ipynb
+++ b/notebooks/J01_data_cleaning.ipynb
@@ -1108,6 +1108,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge the two datasets\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
